# crab

./: .dockerignore  .gitignore  .ttr.yaml  Cargo.toml  Dockerfile  Makefile  README.md  RELEASE.md  test-server.py
.github/workflows/: docker.yaml  release.yml
ci/: macos-python-config
examples/: cpu_database.rs  pyo3.rs  reqwest-errors.rs  test_server.rs  tui.rs
examples/test_server/: 1_listing_page.py  2_data_page.py  Makefile  parser_data.py  parser_listing.py  refinery.toml  test-server.py
migrations/: V1__init.sql  V2__add_status.sql  V3__url_uniq.sql  V4__change_status.sql  V5__add_type.sql  V6__compression.sql
src/: cli.rs  cpu_database.rs  crawler.rs  example_parser.py  lib.rs  main.rs  proxy.rs  python.rs  storage.rs  table.rs  terminal.rs  test_server.rs  utils.rs
tests/: sqlite.rs
