[package]
name = "crab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["rt", "macros"] }
