[package]
name = "crab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.25"
log = "0.4.17"
reqwest = "0.11.13"
scraper = "0.14.0"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["rt", "macros"] }
url = "2.3.1"

[dev-dependencies]
refinery = { version = "0.8.7", features = ["rusqlite"] }
tempfile = "3.3.0"
